# ip-query-system

./: .gitignore  1.md  CONTRIBUTING.md  GITHUB_UPLOAD_GUIDE.md  LICENSE  PROJECT_ARCHITECTURE.md  PROJECT_SUMMARY.md  README.md  about.html  app.py  backup.bat  check_project.py  commit-changes.bat  docker-compose.dev.yml  docker-compose.yml  help.html  index.html  ip-lookup.html  log.md  push_to_github.bat  quick-start.sh  requirements.txt  restart_project.bat  script.js  start.bat  start.ps1  start.py  start.sh  style.css  test-auto-push.txt  test_report.json  upload-github-simple.bat  upload-to-github.bat  upload-to-github.sh  如何上传到GitHub.md
API/: .flake8  Dockerfile  app.py  async_app.py  pyproject.toml  requirements.txt  run_app.py  run_async_app.py  start.py
admin-panel/: .env.example  Dockerfile  composer.json
api-system/: .env.example  Dockerfile  package.json
backend-fastapi/: .dockerignore  .env  .env.example  .env.security  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  start_auth.py  test_basic.py
backend-fastapi/app/: __init__.py  config.py  database.py  main.py  simple_analytics.py  simple_monitoring.py
backend-fastapi/app/admin/: __init__.py  analytics_routes.py  data_routes.py  models.py  users.py
backend-fastapi/app/admin/auth/: __init__.py  dependencies.py  routes.py  utils.py
backend-fastapi/app/admin/permissions/: __init__.py  models.py  routes.py  service.py
backend-fastapi/app/admin/system/: routes.py
backend-fastapi/app/analytics/: __init__.py  middleware.py  models.py  routes.py  service.py
backend-fastapi/app/api/: auth.py  routes.py
backend-fastapi/app/core/: database.py  encryption.py  error_handler.py  exceptions.py  logging.py  password_validator.py  security.py  security_audit.py  security_middleware.py
backend-fastapi/app/data_management/: __init__.py  models.py  routes.py  service.py
backend-fastapi/app/logging/: __init__.py  models.py  routes.py  service.py
backend-fastapi/app/middleware/: auth.py  performance.py
backend-fastapi/app/models/: auth.py  schemas.py  user.py
backend-fastapi/app/monitoring/: middleware.py  models.py  routes.py  service.py
backend-fastapi/app/notifications/: __init__.py  models.py  routes.py  service.py
backend-fastapi/app/optimization/: __init__.py  cache.py  performance.py  routes.py  security.py
backend-fastapi/app/seo/: __init__.py  models.py  routes.py  service.py
backend-fastapi/app/services/: auth_service.py  cache_service.py  geoip_service.py
backend-fastapi/data/: admin.db-shm  admin.db-wal
backend-fastapi/scripts/: create_admin.py  migrate_add_is_admin.py
backend-fastapi/tests/: test_main.py
config/: docker-compose.dev.yml  docker-compose.yml
database/: init_data.sql  schema.sql
deploy/: backup.sh  install.sh  restore.sh
docs/: 05-testing  Aotd.md  DEPLOYMENT.md  INDEX.md  ISSUES_FIXED.md  README.md  api.md  backup-guide.md  configuration.md  deployment.md  feature-icons-guide.md  log.md  seo-management-guide.md  ui-optimization-guide.md
frontend-admin/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend-vue3/: .env.development  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  test.html  vite.config.ts
ip-tool/: Dockerfile  (+2 more)
(+179 files in other folders)
